process taken image in camera controller and send processed image to the photopreview fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,5 @@
     <string name="app_name">Quick Photo</string>
 
     <!-- Bundle keys -->
-    <string name="image_as_byte_array">imageAsByteArray</string>
+    <string name="taken_picture_bitmap">takenPictureBitmap</string>
 </resources>
