configuration changes handled

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,10 @@
 
     <!-- Bundle keys -->
     <string name="taken_picture_bitmap">takenPictureBitmap</string>
+    <string name="saved_left_margin">savedLeftMargin</string>
+    <string name="saved_bottom_margin">savedBottomMargin</string>
+    <string name="saved_text_size">savedTextSize</string>
+
+    <!-- Fragment keys -->
+    <string name="photo_preview_fragment_key">photoPreviewFragmentKey</string>
 </resources>
