image cached in disk instead of memory beacuse of out of memory issues on large bitmaps

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
 
     <!-- Fragment keys -->
     <string name="photo_preview_fragment_key">photoPreviewFragmentKey</string>
+
+    <!-- Internal storage image name -->
+    <string name="image_name_for_storage">takenImage</string>
 </resources>
